# rs-nobandit

./: Cargo.toml  README.md  schema.sql
src/: backend_service.rs  common_struct.rs  database_operation.rs  frontend_service.rs  main.rs
src/common_struct/: app_error.rs  car_desc.rs  car_license_plate.rs  car_owner.rs  config.rs  database_connect.rs  history.rs  registered.rs
src/database_operation/: config_operation.rs  history_operation.rs  registered_operation.rs
src/fontend_service/: ocrs_recognizer.rs
src/frontend_service/: camera_operation.rs  ocrs_recognizer.rs
