[package]
name = "rs-nobandit"
version = "0.1.0"
edition = "2021"

[dependencies]
md-5 = "0.10.6"
chrono = "0.4.38"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

#sqlite = "0.36.1"
mysql = "25.0.1"

#ocrs = "0.9.0"

#leptonica-sys = "0.4.8"
#tesseract = "0.15.1"
#tesseract-plumbing = "0.11.0"
